# SIFT_MIND

./: .env.example  .gitignore  ARCHITECTURE_DIAGRAM.mmd  LICENSE  README.md  SUBMISSION.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
case_data/: README.md  fixture_baseline.json  public_sample_manifest.example.json  public_sample_manifest.schema.json
case_data/real_evidence/: real_manifest.json
dashboard/: index.html
demo_logs/: accuracy_report.md  agent_execution_log.jsonl
scripts/: run_more_data.py  sift_mode_smoke.sh  sift_mode_smoke_wsl.ps1  sift_run.py  sift_ssh.py  verify.ps1
src/sift_mind/: __init__.py  config.py  contracts.py  model_provider.py  production_audit.py  run.py  runtime.py  sift_smoke.py  submission.py
src/sift_mind.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/sift_mind/agent/: loop.py  model_brief.py  prompts.py
src/sift_mind/contradiction/: __init__.py  graph.py
src/sift_mind/ledger/: __init__.py  ledger.py  schema.sql
src/sift_mind/mcp_server/: server.py
src/sift_mind/mcp_server/tools/: __init__.py  base.py  disk.py  logs.py  memory.py  network.py  parsers.py  timeline.py
src/sift_mind/mcp_server/tools/yara_rules/: credential_tools.yar
src/sift_mind/report/: writer.py
tests/: test_contracts.py  test_contradiction_graph.py  test_fixture_runner.py  test_ledger_report.py  test_mcp_server.py  test_model_brief.py  test_model_provider.py  test_packaging.py  test_parsers.py  test_production_audit.py  test_runtime.py  test_sift_smoke.py  test_submission.py  test_tools.py
