[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sift-mind"
version = "0.1.0"
description = "Metacognitive incident response orchestrator for SANS SIFT and Protocol SIFT."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "SIFT-MIND Contributors" }]
dependencies = [
  "pydantic>=2.0.0",
  "jinja2>=3.1.0",
  "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0.0", "fastmcp>=0.5.0"]
graph = ["networkx>=3.2"]
ui = ["rich>=13.0.0"]
cli = ["click>=8.0.0"]
forensics = ["python-evtx>=0.8.0", "yara-python>=4.3.0", "pyewf>=20231119"]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0"]
all = [
  "mcp>=1.0.0",
  "fastmcp>=0.5.0",
  "networkx>=3.2",
  "rich>=13.0.0",
  "click>=8.0.0",
  "python-evtx>=0.8.0",
  "yara-python>=4.3.0",
  "pyewf>=20231119",
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
]

[project.scripts]
sift-mind = "sift_mind.run:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sift_mind = ["ledger/*.sql", "report/templates/*.jinja", "mcp_server/tools/yara_rules/*.yar"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
